ADD_EXECUTABLE(csgdemo csgdemo.cpp)
TARGET_LINK_LIBRARIES(csgdemo csg ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(3axis 3axis.cpp)
TARGET_LINK_LIBRARIES(3axis ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(bubbles bubbles.cpp)
TARGET_LINK_LIBRARIES(bubbles csg ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(glcopysp glcopysp.cpp)
TARGET_LINK_LIBRARIES(glcopysp ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(glreadsp glreadsp.cpp)
TARGET_LINK_LIBRARIES(glreadsp ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(glzcopy glzcopy.cpp)
TARGET_LINK_LIBRARIES(glzcopy ${GLT_LINK_LIBRARIES})
