# INTERACTIVE CSG DEMOS

ADD_EXECUTABLE(csgdemo csgdemo.cpp)
TARGET_LINK_LIBRARIES(csgdemo csg ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(bubbles bubbles.cpp)
TARGET_LINK_LIBRARIES(bubbles csg ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(scsinter scsinter.cpp)
TARGET_LINK_LIBRARIES(scsinter csg ${GLT_LINK_LIBRARIES})

# CSG TREE GENERATORS

ADD_EXECUTABLE(3axis 3axis.cpp)
TARGET_LINK_LIBRARIES(3axis ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(helix helix.cpp)
TARGET_LINK_LIBRARIES(helix ${GLT_LINK_LIBRARIES})

# DIAGNOSTICS

ADD_EXECUTABLE(glcopysp glcopysp.cpp)
TARGET_LINK_LIBRARIES(glcopysp ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(glreadsp glreadsp.cpp)
TARGET_LINK_LIBRARIES(glreadsp ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(glzcopy glzcopy.cpp)
TARGET_LINK_LIBRARIES(glzcopy ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(glzequal glzequal.cpp)
TARGET_LINK_LIBRARIES(glzequal ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(scsseq scsseq.cpp)
TARGET_LINK_LIBRARIES(scsseq csg ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(volume volume.cpp)
TARGET_LINK_LIBRARIES(volume csg ${GLT_LINK_LIBRARIES})
