ADD_EXECUTABLE(example1 example1.cpp)
ADD_EXECUTABLE(example2 example2.cpp)
ADD_EXECUTABLE(example3 example3.cpp)
ADD_EXECUTABLE(example4 example4.cpp)
ADD_EXECUTABLE(example5 example5.cpp)
ADD_EXECUTABLE(example6 example6.cpp)

TARGET_LINK_LIBRARIES(example1 ${GLUI_LIBRARIES})
TARGET_LINK_LIBRARIES(example2 ${GLUI_LIBRARIES})
TARGET_LINK_LIBRARIES(example3 ${GLUI_LIBRARIES})
TARGET_LINK_LIBRARIES(example4 ${GLUI_LIBRARIES})
TARGET_LINK_LIBRARIES(example5 ${GLUI_LIBRARIES})
TARGET_LINK_LIBRARIES(example6 ${GLUI_LIBRARIES})
