ADD_EXECUTABLE(coments coments.cpp)
TARGET_LINK_LIBRARIES(coments ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(hash hash.cpp)
TARGET_LINK_LIBRARIES(hash ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(lru lru.cpp)
TARGET_LINK_LIBRARIES(lru ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(observer2 observer2.cpp)
TARGET_LINK_LIBRARIES(observer2 ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(random random.cpp)
TARGET_LINK_LIBRARIES(random ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(refcount refcount.cpp)
TARGET_LINK_LIBRARIES(refcount ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(round round.cpp)
TARGET_LINK_LIBRARIES(round ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(shrink shrink.cpp)
TARGET_LINK_LIBRARIES(shrink ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(string string.cpp)
TARGET_LINK_LIBRARIES(string ${GLT_LINK_LIBRARIES})
