ADD_EXECUTABLE(bin2src bin2src.cpp)
TARGET_LINK_LIBRARIES(bin2src ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(text2src text2src.cpp)
TARGET_LINK_LIBRARIES(text2src ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(dos2unix dos2unix.cpp)
TARGET_LINK_LIBRARIES(dos2unix ${GLT_LINK_LIBRARIES})

ADD_EXECUTABLE(unix2dos unix2dos.cpp)
TARGET_LINK_LIBRARIES(unix2dos ${GLT_LINK_LIBRARIES})
