ADD_CUSTOM_COMMAND(OUTPUT vertexShader.cpp  COMMAND ${CMAKE_SOURCE_DIR}/bin/text2src vertexShader.txt > vertexShader.cpp DEPENDS vertexShader.txt) 
ADD_CUSTOM_COMMAND(OUTPUT windowShader.cpp  COMMAND ${CMAKE_SOURCE_DIR}/bin/text2src windowShader.txt > windowShader.cpp DEPENDS windowShader.txt) 
ADD_CUSTOM_COMMAND(OUTPUT noise1.cpp        COMMAND ${CMAKE_SOURCE_DIR}/bin/bin2src -z -image noise1.png > noise1.cpp DEPENDS noise1.png) 
ADD_CUSTOM_COMMAND(OUTPUT windowShader1.cpp COMMAND ${CMAKE_SOURCE_DIR}/bin/bin2src -z -image windowShader1.png > windowShader1.cpp DEPENDS windowShader1.png) 
ADD_CUSTOM_COMMAND(OUTPUT windowShader2.cpp COMMAND ${CMAKE_SOURCE_DIR}/bin/bin2src -z -image windowShader2.png > windowShader2.cpp DEPENDS windowShader2.png) 
ADD_CUSTOM_COMMAND(OUTPUT windowShader3.cpp COMMAND ${CMAKE_SOURCE_DIR}/bin/bin2src -z -image windowShader3.png > windowShader3.cpp DEPENDS windowShader3.png) 
ADD_EXECUTABLE(glsl main.cpp vertexShader.cpp windowShader.cpp noise1.cpp windowShader1.cpp windowShader2.cpp windowShader3.cpp)
TARGET_LINK_LIBRARIES(glsl ${GLT_LINK_LIBRARIES})
