FILE(GLOB SOURCES . *.cpp)
FILE(GLOB UIS . *.ui)
QT4_WRAP_UI(GENUI ${UIS})
QT4_WRAP_CPP(MOCS main.h GlutWidget.h GlutMasterWidget.h)
QT4_ADD_RESOURCES(RESS resource.qrc)
INCLUDE_DIRECTORIES(${QT_INCLUDES})
ADD_EXECUTABLE(qtTest ${SOURCES} ${MOCS} ${GENUI} ${RESS})
SET(NEVERLAND_LINK_LIBRARIES pglEngine pglGeometry pgl pglTexture pglUi gpc)
TARGET_LINK_LIBRARIES(qtTest ${QT_LIBRARIES} ${NEVERLAND_LINK_LIBRARIES} ${GLUI_LIBRARIES} ${GLT_LINK_LIBRARIES})
